add open source contributions

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -22,7 +22,15 @@
   </Link>
 </h3>
 
-<FeedItems itemsFormat="compact" filterByTags={['project']} limit={5} />
+<FeedItems itemsFormat="compact" filterByTags={['project']} limit={3} />
+
+<h3>Open source contributions&nbsp;&nbsp;
+  <Link to='open-source'>
+    <Button style={{marginTop: '8px'}}>all contributions</Button>
+  </Link>
+</h3>
+
+<FeedItems itemsFormat="compact" filterByTags={['open-source']} limit={3} />
 
 <h3>Events</h3>
 
